force-app/main/default/objects/Instagram_Api_Details__c/Instagram_Api_Details__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Instagram Api Details</label>
</CustomObject>