force-app/main/default/objects/Instagram_Api_Details__c/fields/App_Access_Token__c.field-meta.xml
<CustomField>
    <fullName>App_Access_Token__c</fullName>
    <label>App Access Token</label>
    <type>TextArea</type>
</CustomField>