force-app/main/default/objects/Instagram_Api_Details__c/fields/basicUrl__c.field-meta.xml
<CustomField>
    <fullName>basicUrl__c</fullName>
    <label>basicUrl</label>
    <type>Url</type>
</CustomField>