force-app/main/default/objects/Instagram_Api_Details__c/fields/next_pagination_DM_Token__c.field-meta.xml
<CustomField>
    <fullName>next_pagination_DM_Token__c</fullName>
    <label>next pagination DM Token</label>
    <type>TextArea</type>
</CustomField>