force-app/main/default/objects/Instagram_Api_Details__c/fields/next_pagination_hashtag_Token__c.field-meta.xml
<CustomField>
    <fullName>next_pagination_hashtag_Token__c</fullName>
    <label>next pagination hashtag Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>