force-app/main/default/objects/Instagram_Api_Details__c/fields/next_Pagination_Post_Token__c.field-meta.xml
<CustomField>
    <fullName>next_Pagination_Post_Token__c</fullName>
    <label>next Pagination Post Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>