force-app/main/default/objects/Instagram_Api_Details__c/fields/Page_Id__c.field-meta.xml
<CustomField>
    <fullName>Page_Id__c</fullName>
    <label>Page Id</label>
    <type>TextArea</type>
</CustomField>