force-app/main/default/objects/Instagram_Api_Details__c/fields/Page_name__c.field-meta.xml
<CustomField>
    <fullName>Page_name__c</fullName>
    <label>Page name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>