force-app/main/default/objects/Instagram_Api_Details__c/fields/pageAccessToken__c.field-meta.xml
<CustomField>
    <fullName>pageAccessToken__c</fullName>
    <label>pageAccessToken</label>
    <type>TextArea</type>
</CustomField>