force-app/main/default/objects/Instagram_Api_Details__c/fields/REDIRECT_URI__c.field-meta.xml
<CustomField>
    <fullName>REDIRECT_URI__c</fullName>
    <label>REDIRECT_URI</label>
    <type>TextArea</type>
</CustomField>